# hpcgtfem

./: .gitignore  CITATION.cff  LICENSE  README.md  Some_Validation_Examples.ipynb  pyproject.toml  temp_testing.ipynb  two_element_assembly.ipynb  twoelem_design.ipynb
examples/validation/: reference_projection.py
src/localtfem/: __init__.py
src/localtfem/fem/: assembly.py  bkp_assemble_global_mass.py  dof_map.py  reference_mass.py  reference_stiffness.py  rhs.py  visualization.py
src/localtfem/geometry/: mesh.py  reference_triangle.py  structured_mesh.py
src/localtfem/modified_dubiner/: dubiner.py  dubiner_sym.py  jacobi.py
src/localtfem/quadrature/: legendre.py  lglnodes.py  lgrnodes.py  lgwt.py  reftriquad.py
