[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "localtfem"
version = "0.1.0"
description = "Pseudo-Mass Matrix TFEM framework"
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "sympy"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]